# libnum

./: CMakeLists.txt  Makefile  README.md
include/: libnum.h  libnum_mat3x3.h  libnum_qtn.h  libnum_types.h  libnum_vec2.h  libnum_vec3.h
src/convert/: qtn_to_vec3.c  vec2to3.c  vec3_to_qtn.c  vec3to2.c
src/mat3x3/: mat3x3__1.c  mat3x3__2.c  mat3x3__3.c
src/num/: num__1.c  num__2.c
src/qtn/: qtn__1.c  qtn__2.c
src/vec2/: vec2__1.c  vec2__2.c  vec2__3.c  vec2__4.c  vec2__5.c  vec2__6.c  vec2__7.c
src/vec3/: vec3__1.c  vec3__2.c  vec3__3.c  vec3__4.c  vec3__5.c  vec3__6.c  vec3__7.c
